Parse C files in C mode

Now there are 2 language profiles: one for C++, another one for C.
The language type is determined by mime type.
Since *.h files used in C and C++, by default they are parsed
in C++ mode, to change that behavior there is a "Parse *.h headers
in plain C" check-box.

BUG: 357774
BUG: 357615
BUG: 57156

Differential revision: https://phabricator.kde.org/D1047