languages/clang/clangparsejob.cpp
@@ -170,7 +170,7 @@ ClangParseJob::ClangParseJob(const IndexedString& url, ILanguageSupport* languag
     } else {
         m_environment.addIncludes(IDefinesAndIncludesManager::manager()->includes(tuUrl.str()));
         m_environment.addDefines(IDefinesAndIncludesManager::manager()->defines(tuUrl.str()));
-        m_environment.setParserSettings(ClangSettingsManager::self()->parserSettings(nullptr));
+        m_environment.setParserSettings(ClangSettingsManager::self()->parserSettings(tuUrl.str()));
     }
     const bool isSource = ClangHelpers::isSource(tuUrl.str());
     m_environment.setQuality(
